--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@grpc/grpc-js": "1.10.9",
     "@grpc/reflection": "1.0.3",
     "@nestjs/common": "10.3.2",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "10.3.2",
     "@nestjs/microservices": "10.3.2",
     "@nestjs/platform-express": "10.3.8",
